crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__function_parameter_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/mod.rs
assertion_line: 116
expression: "goto_definition(r#\"\n%! main.sp\nvoid bar(int foo) {\n              |\n              ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 13
      },
      "end": {
        "line": 0,
        "character": 16
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 16
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 13
      },
      "end": {
        "line": 0,
        "character": 16
      }
    }
  }
]
