crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__function_parameter_2.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/mod.rs
assertion_line: 129
expression: "goto_definition(r#\"\n%! main.sp\nvoid bar(int foo) {\n    foo = 1;\n     |\n     ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 7
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 16
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 13
      },
      "end": {
        "line": 0,
        "character": 16
      }
    }
  }
]
