crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__global_variable_4.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/mod.rs
assertion_line: 40
expression: "goto_definition(r#\"\n%! main.sp\nint foo = 1;\nint bar = foo;\n           |\n           ^\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 10
      },
      "end": {
        "line": 1,
        "character": 13
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 11
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 4
      },
      "end": {
        "line": 0,
        "character": 7
      }
    }
  }
]
